<resources>
    <string name="app_name">有菜</string>
    <string name="pull_to_refresh_bottom_pull_label">上拉刷新</string>
    <string name="pull_to_refresh_pull_label" translatable="false">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label" translatable="false">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label" translatable="false">加载中&#8230;</string>
    <string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="paying">支付中</string>
    <string name="get_prepayid_succ">获取prepayid成功</string>
    <string name="get_prepayid_fail" formatted="false">获取prepayid失败，原因%s</string>
    <string name="name">姓名</string>
    <string name="mobile_phone">手机号</string>
    <string name="building_number">楼号</string>
    <string name="unit_number">单元号</string>
    <string name="house_number">门牌号</string>
    <string name="required">必填</string>
    <string name="community">小区</string>
    <string name="nearby_community">附近的小区</string>
    <string name="commit">提交</string>
    <string name="ok">好的</string>
    <string name="receiveing_address">收货地址</string>
    <string name="community_name">小区名称</string>
    <string name="search">搜索</string>
    <string name="choose_city">城市选择</string>
    <string name="sorry">很抱歉,该城市还未开通配菜服务.</string>
    <string name="input_community_name_hint">请输入小区名称</string>
    <string name="network_error_tip">请检查您的网络后重试...</string>
    <string name="search_community">搜索小区</string>
    <string name="input_name">请输入您的姓名</string>
    <string name="input_mobile_phone">请输入您的手机号码</string>
    <string name="choose_community">请选择您的小区</string>
    <string name="input_building_number">请输入您的楼号及门牌号</string>
    <string name="input_union_number">请输入您的单元号</string>
    <string name="input_house_number">请输入您的门牌号</string>

    <string name="login">登录</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="sms_code">验证码</string>
    <string name="mobile_phone_error">请输入合法的手机号</string>
    <string name="sns_code_error">请输入合法的验证码</string>
    <string name="re_get_sms_code">重新获取验证码</string>
    <string name="no_combo_tip">您还未选择套餐,请先选择套餐</string>
    <string name="choose_combo">选择套餐</string>
    <string name="choose_dishes">选择菜品</string>
    <string name="login_fail">登录失败</string>
    <string name="login_tip">登录后,可以购买套餐和选品</string>
    <string name="look_combo_detail">查看套餐详情</string>
    <string name="shopping_order">购买订单</string>
    <string name="dishes_order">菜品订单</string>
    <string name="my_order">我的订单</string>
    <string name="login_msg_tip">亲,使用此功能需要登录哦!</string>
    <string name="consultation">咨询</string>
    <string name="call_message_unknow">您的设备不支持拨打电话的功能</string>
    <string name="tel_message_absent">请插入SIM卡</string>
    <string name="re_choose_dishes">我要重新选择菜品</string>
    <string name="order_details">订单详情</string>
    <string name="my_combo">我的套餐</string>
    <string name="pay">支付</string>
    <string name="alipay_pay">支付宝支付</string>
    <string name="please_pay_money">请支付金额</string>
    <string name="shop_cart_clear">清空全部</string>
    <string name="shop_cart">购物车</string>
    <string name="add_shop_cart">加入购物车</string>
    <string name="cailanzi">菜篮子</string>
    <string name="small_market_buy">选好了</string>
    <string name="small_market_buy_not">满A元起送</string>
    <string name="small_market_buy_not_enough">还差A</string>
    <string name="small_market_shop_cart_price">共A元</string>
    <string name="small_market_shop_cart_null">购物车是空的</string>
    <string name="search_community_error_tip">搜索不到小区,填写我的小区</string>
    <string name="detail_address">详细地址</string>
    <string name="fill_in_address">填写地址</string>
    <string name="go_choose_dishes">去选菜</string>
    <string name="pay_by_year">年付:</string>
    <string name="now_pay">立即支付</string>
    <string name="supported_pay_by_year">本套餐只支持年付</string>
    <string name="out_of_required_weight">亲,您已选满A啦!^^</string>
    <string name="out_of_maxpacks">亲,该菜品库存不足,请选其他菜品吧</string>
    <string name="out_of_remains">亲,该菜品剩余不足,请选其他菜品吧</string>
    <string name="out_of_required_weight1">亲,选该菜品会超过A的,\n换换其他的吧！^^</string>
    <!-- 收货地址 -->
    <string name="title_receive_address">收货地址</string>
    <string name="address">地址</string>
    <string name="my_address">我的地址</string>
    <string name="title_edit_address">编辑收货地址</string>
    <string name="common_required_buiding_num">请输入楼号</string>
    <string name="common_required_door_num">请输入门牌号</string>
    <string name="common_update_submit">请修改信息后再提交</string>
    <string name="common_phone_format_error">请输入正确的手机格式</string>
    <string name="common_phone_required">请输入手机号码</string>
    <string name="common_zone">小区</string>
    <string name="common_num_building">号楼</string>
    <string name="common_unit">单元</string>
    <string name="common_building_num">楼号</string>
    <string name="common_unit_num">单元号</string>
    <string name="common_door_num">门牌号</string>
    <string name="common_required_input">必填</string>
    <string name="common_option_input">选填</string>
    <string name="combo_introduce">套餐介绍</string>
    <string name="shopping_combo">购买套餐</string>
    <string name="add_address">单击此处添加您的收货地址!</string>
    <string name="address_add">添加地址</string>
    <string name="submit_immediately">立即提交</string>
    <string name="pay_immediately">立即支付</string>
    <string name="pay_success">支付成功</string>
    <string name="order_result">订单结果</string>
    <string name="pay_fail">支付失败</string>
    <string name="order_pay_success">订单支付成功</string>
    <string name="order_submit_success">订单提交成功</string>
    <string name="pay_success_tip">我们会按时为您配送订单.</string>
    <string name="buy">购买</string>
    <string name="update">更新</string>
    <string name="ignore">忽略</string>
    <string name="exit">退出</string>
    <string name="dishes_error">亲,您选择的菜品数量不足哦!</string>
    <string name="dishes_error_much">亲,您选择的菜品数量超了哦!</string>
    <string name="cancel_order">取消订单</string>
    <string name="cancel_order_success">订单取消成功</string>
    <string name="re_choose_dishes_tip">重新选择菜品会删除现有订单,确定删除吗?</string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="exit_login">退出登录</string>
    <string name="set">设置</string>
    <string name="hint_feedback">您的建议是我们前进的动力!</string>
    <string name="tks_feedback_tip">感谢您的反馈.</string>
    <string name="submit">提交</string>
    <string name="feedback">问题反馈</string>
    <string name="feedback_error_tip">请输入您的反馈内容</string>
    <string name="logout_success">退出成功</string>
    <string name="logout_fail">退出失败</string>
    <string name="has_choosen_dishes_tip">您已选过本期菜品,如需更改请点击.</string>
    <string name="has_choosen_next_dishes_tip">您如需选择下期菜品,请单击此处.</string>
    <string name="deliverying">您选择的套餐正在配送中,请耐心等待.</string>
    <string name="delievery_success">您的上期菜品已经配送完成.</string>
    <string name="discount_price">优惠价</string>
    <string name="discount_limit_time">限时特惠</string>
    <string name="about">关于有菜</string>
    <string name="company_name">北京爱乐守一网络科技有限公司</string>
    <string name="copyright">有菜版权所有</string>
    <string name="help">帮助</string>
    <string name="unpaid">未付款</string>
    <string name="nodelivery">待配送</string>
    <string name="choose_dishes_successful">您已选好菜品啦!</string>
    <string name="choose_dishes_tip">本期选菜时间已过,请于周五开始下期选菜!</string>
    <string name="has_chosen_dishes">本期菜品已选</string>
    <string name="market_price">市场价</string>
    <string name="specialty">农庄优选</string>
    <string name="farm_info">农庄详情</string>
    <string name="spike">秒杀</string>
    <string name="spike_error_tip">您已购买过该产品,不能重复购买!</string>
    <string name="organic_farm_combo">有机农庄宅配套餐</string>
    <string name="more_combo">更多营养套餐</string>
    <!--红包-->
    <string name="use_favorable_red_packets">使用优惠红包</string>
    <string name="pay_red_packets">支付红包</string>
    <string name="use_for_app_off_line_pay">App下单在线支付使用</string>
    <string name="use_rule">使用规则</string>
    <string name="empty_red_packets">您还没有红包唉～\n让朋友分享给您个红包吧</string>
    <string name="share_red_packets">发红包</string>
    <string name="congratulations_you_get_red_packets">恭喜您获得A个红包</string>
    <string name="share_red_packets_tip">分享红包给好友\n可用于抵扣在线支付金额</string>
    <!--延期配送-->
    <string name="delay_delivery_note">如家中有事，您可以选择延期配送菜品。延期期间不在给您短信通知选菜，延期结束后我门会通知您选菜。</string>
    <string name="btn_delay_a_week_delivery">延期一周配送</string>
    <string name="btn_has_delaied_a_week_delivery">您已延期一周配送</string>
    <string name="order_delay_delivery">订单延期配送</string>
    <string name="prompt_order_delivery">您确定订单延期配送？</string>
    <string name="red_packets_rule">红包使用规则</string>
    <!--我的地址-->
    <string name="save">保存</string>
    <string name="save_address">保存地址</string>
    <string name="input_zone_address">输入小区地址</string>
    <string name="contract">联系人</string>
    <string name="receive_address">收货地址</string>
    <string name="input_receive_name">请填写收货人姓名</string>
    <string name="input_receive_mobile">请填写收货人手机号</string>
    <string name="building_and_room_no">楼号－门牌号：</string>
    <string name="sample_building_room">例：12号楼1501室</string>
    <string name="click_to_choose">点击选择</string>
    <string name="hint_input_street_and_zone_name">请输入：街道，小区名称</string>
    <string name="duplicate_address_content">请修改地址后保存</string>
    <string name="prompt_delete_address">您确定删除该地址？</string>

    <string name="shopping_cart_empty">您的购物车是空的哦.</string>
    <string name="ucai_common_tip">有菜提供的均是绿色食品,请放心食用.</string>
    <string name="remark">备注</string>
    <string name="add_remark">添加备注</string>
    <string name="back_dishes">备选蔬菜</string>
    <string name="use_discount_red_packets">使用优惠红包</string>
    <string name="red_packets_money">X元可用</string>
    <string name="has_choosen_dishes">您已选好菜品了!</string>
    <string name="leave_msg_to_farm">留言给农庄</string>
    <string name="option_dishes">备选菜</string>
    <string name="option_dishes_tip">由于蔬菜有天气、病害等不确定因素影响,可能有某种蔬菜当日无法配送的情况,所以请在以下选择2-3种备选蔬菜.</string>
    <string name="option_dishes_tip_1">※备选菜为必选项</string>
    <string name="no_choose_option_tip">亲,您还没有选择备选菜哦!请单击备选菜,选择2-3种吧!</string>
    <string name="no_login_tip">亲,您还未登录哦~登录后才可查看购物车哦~</string>
    <string name="go_login">去登录</string>

    <string name="you_have_not_buy_combo">您还没有购买套餐</string>
    <string name="add_shop_cart_success">加入购物车成功.</string>

    <string name="freight">运费</string>
    <string name="freight_tip">(订单满99元包邮)</string>
    <string name="freight_money">10元</string>
    <string name="no_freight">免运费</string>

    <string name="wx_pay">微信支付</string>
</resources>
