<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include layout="@layout/common_title_ly" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/search_community_corner">

        <EditText
            android:id="@+id/keyword_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/input_community_name_hint"
            android:paddingLeft="12dp" />

        <TextView
            android:id="@+id/search_community"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="15dp"
            android:text="@string/search"
            android:textColor="@color/light_green"
            android:textSize="18sp"
            android:visibility="gone" />
    </FrameLayout>

    <ListView
        android:id="@+id/mLv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:divider="#e4e4e4"
        android:dividerHeight="0.5dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:background="#e4e4e4"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/fill_in_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px120"
            android:gravity="center"
            android:background="@drawable/list_item_selector"
            android:text="@string/search_community_error_tip"
            android:textColor="@color/black_242424"
            android:textSize="@dimen/font28" />

    </LinearLayout>


</LinearLayout>