<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_color"
    android:orientation="vertical">

    <include layout="@layout/common_title_ly" />

    <LinearLayout
        android:id="@+id/addressee_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/px16"
        android:layout_marginTop="@dimen/px16"
        android:background="@android:color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_ribbon" />

        <TextView
            android:id="@+id/addressee_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px16"
            android:paddingLeft="@dimen/px40" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/px16"
            android:layout_marginTop="@dimen/px16"
            android:paddingLeft="@dimen/px40" />
    </LinearLayout>

    <ListView
        android:id="@+id/mLv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:background="@null"
        android:divider="#e4e4e4"
        android:dividerHeight="0.5dp" />

    <TextView
        android:id="@+id/re_choose_dishes"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px110"
        android:background="@android:color/white"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/re_choose_dishes"
        android:textColor="@color/green_24c05d"
        android:textSize="@dimen/px30" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/common_bg_color"
        android:orientation="vertical">

        <include layout="@layout/common_line"></include>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/shop_cart_total_price_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="12dp"
                android:gravity="left"
                android:text="@string/pay_by_year"
                android:textColor="@color/common_text"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/shop_cart_surpport_now_pay_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/shop_cart_total_price_tv"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:gravity="left"
                android:text="@string/supported_pay_by_year"
                android:textColor="@color/common_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/bug_order_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="14dp"
                android:background="@drawable/pay_order_btn_shape_selector"
                android:gravity="center"
                android:paddingBottom="@dimen/px24"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="@dimen/px24"
                android:text="@string/now_pay"
                android:textColor="@color/white_f4f4f4"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>