<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_ebebeb"
    android:orientation="vertical">

    <include layout="@layout/common_title_ly" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px20" />

    <include layout="@layout/address_widget_ly" />

    <!--<ImageView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center_horizontal"-->
    <!--android:layout_marginTop="@dimen/px40"-->
    <!--android:src="@drawable/icon_vip" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/px10"
        android:background="@android:color/white"
        android:orientation="vertical">


        <FrameLayout
            android:id="@+id/red_packets_money_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_item_selector"
            android:padding="@dimen/px30">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/px10"
                android:text="@string/use_discount_red_packets"
                android:textColor="@color/black_444444" />

            <TextView
                android:id="@+id/red_packets_money_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:drawableRight="@drawable/icon_more"
                android:gravity="center"
                android:textColor="@color/red_fe5647" />
        </FrameLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e4e4e4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:layout_marginTop="@dimen/px40"
            android:text="@string/please_pay_money"
            android:textColor="@color/gray_676767"
            android:textSize="@dimen/px32" />
        <!--android:layout_marginTop="@dimen/px50"-->

        <TextView
            android:id="@+id/pay_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/px30"
            android:text="￥"
            android:textColor="@color/orange_ff9000"
            android:textSize="@dimen/font40" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/px56"
            android:background="@color/common_bg_color" />


        <FrameLayout
            android:id="@+id/alipay_ly"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px150"
            android:background="@drawable/list_item_selector">

            <ImageView
                android:layout_width="@dimen/px100"
                android:layout_height="@dimen/px100"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/px40"
                android:src="@drawable/icon_alipay" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="@dimen/px40"
                android:drawablePadding="@dimen/px40"
                android:drawableRight="@drawable/icon_more"
                android:gravity="center"
                android:text="@string/alipay_pay"
                android:textColor="@color/gray_676767"
                android:textSize="@dimen/font28" />
        </FrameLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/common_bg_color" />

        <FrameLayout
            android:id="@+id/wx_pay_ly"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px150"
            android:background="@drawable/list_item_selector">

            <ImageView
                android:layout_width="@dimen/px100"
                android:layout_height="@dimen/px100"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/px40"
                android:src="@drawable/icon_wx_pay" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="@dimen/px40"
                android:drawablePadding="@dimen/px40"
                android:drawableRight="@drawable/icon_more"
                android:gravity="center"
                android:text="@string/wx_pay"
                android:textColor="@color/gray_676767"
                android:textSize="@dimen/font28" />
        </FrameLayout>





        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/common_bg_color" />

    </LinearLayout>


</LinearLayout>